@@ -44,6 +44,7 @@
 </ul>
 
 <form action="" method="post">
+{% csrf_token %}
 <div>
     <input type="hidden" name="post" value="yes" />
     <input type="submit" value="Yes, I'm sure" />
