@@ -24,6 +24,7 @@
 <div id="content-main">
 
 <form enctype="multipart/form-data" action="" method="POST">
+{% csrf_token %}
 <div>
 {% if form.errors %}
 	 <p class="errornote">
